--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -14,5 +14,6 @@
     "default_icon": "icon.png",
     "default_popup": "popup.html",
     "default_title": "Click to enter time"
-  }
+  },
+  "options_page": "options.html"
 }
